# rust-bitcoin-finder

./: .gitignore  Cargo.toml  README.md  corresponding_keys.txt  last_key.txt  wallets.py
keys/: 4_found.txt  4_last.txt
src/: config.rs  main.rs  wallet.rs  wallets.rs
src/base58/: decode.rs  encode.rs  mod.rs
src/btc_utils/: create_public_hash160.rs  decode_hex.rs  generate_wif.rs  hash160.rs  increment_and_format_key.rs  mod.rs  private_key_to_public_key.rs  public_key_to_address.rs  read_last_key.rs  sha256.rs  verify_key_pair.rs  write_last_key.rs  write_to_file.rs
src/files/: make_dir.rs  mod.rs  read_last_key.rs  write_last_key.rs  write_to_file.rs
src/utils/: biguint_to_bytes_be.rs  generate_public_key.rs  generate_wif.rs  get_target_hash_from_address.rs  hash160.rs  mod.rs  murmur_hash.rs  verify_address_with_murmur.rs
