[package]
name = "bitcoin-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
ripemd160 = "0.9"
secp256k1 = "0.29"
chrono = "0.4"
murmur3 = "0.5.2"
bitcoin = "0.32.2"
num-iter = "0.1.45"
sha2 = "0.10.8"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
